# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "apache-airflow-ctl"
dynamic = ["version"]
description = "Apache Airflow command line tool for communicating with an Apache Airflow, using the API."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9, <3.13"
dependencies = [
    # TODO there could be still missing deps such as airflow-core
    "argcomplete>=1.10",
    "httpx>=0.25.0",
    "keyring>=25.6.0",
    "lazy-object-proxy>=1.2.0",
    "methodtools>=0.4.7",
    "platformdirs>=4.3.6",
    "pydantic>=2.10.2",
    "rich-argparse>=1.0.0",
    "structlog>=25.2.0",
    "uuid6>=2024.7.10",
]

classifiers = [
  "Framework :: Apache Airflow",
]

[project.scripts]
airflowctl = "airflowctl.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/airflowctl/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/airflowctl"]

[tool.ruff]
extend = "../pyproject.toml"
src = ["src"]
namespace-packages = ["src/airflowctl"]

[tool.ruff.lint.per-file-ignores]

# Ignore Doc rules et al for anything outside of tests
"!src/*" = ["D", "TID253", "S101", "TRY002"]

# Ignore the pytest rules outside the tests folder - https://github.com/astral-sh/ruff/issues/14205
"!tests/*" = ["PT"]

# Pycharm barfs if this "stub" file has future imports
"src/airflowctl/__init__.py" = ["I002"]

# Generated file, be less strict
"src/airflowctl/api/datamodels/generated.py" = ["UP007", "D101", "D200"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["src/airflowctl"]
include_namespace_packages = true

[tool.coverage.report]
skip_empty = true
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "@(typing(_extensions)?\\.)?overload",
    "if (typing(_extensions)?\\.)?TYPE_CHECKING:",
]

[dependency-groups]
codegen = [
    "datamodel-code-generator[http]==0.28.2",
]

# To use:
#
# TODO: Automate this in CI via pre-commit hook and generate the file each time
# The API should be running in the background to serve the OpenAPI schema
# uv run --group codegen --project apache-airflow --directory airflow/ datamodel-codegen
[tool.datamodel-codegen]
capitalise-enum-members=true # `State.RUNNING` not `State.running`
disable-timestamp=true
enable-version-header=true
enum-field-as-literal='one' # When a single enum member, make it output a `Literal["..."]`
input-file-type='openapi'
output-model-type='pydantic_v2.BaseModel'
output-datetime-class='datetime'
target-python-version='3.9'
use-annotated=true
use-default=true
use-double-quotes=true
use-schema-description=true  # Desc becomes class doc comment
use-standard-collections=true # list[] not List[]
use-subclass-enum=true # enum, not union of Literals
use-union-operator=true # 3.9+annotations, not `Union[]`

url = "http://0.0.0.0:8080/openapi.json"
output = "src/airflowctl/api/datamodels/generated.py"
